--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@ngneat/reactive-forms": "^1.7.2",
+    "@ngrx/effects": "^11.1.1",
+    "@ngrx/store": "^11.1.1",
     "@nrwl/angular": "12.0.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
