--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,13 +10,24 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2017", "dom"],
+    "lib": [
+      "es2017",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@ng-shinobi-app/api-interfaces": ["libs/api-interfaces/src/index.ts"]
+      "@ng-shinobi-app/api-interfaces": [
+        "libs/api-interfaces/src/index.ts"
+      ],
+      "@ng-shinobi-app/extension": [
+        "libs/api-interfaces/src/lib/extension-types.ts"
+      ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
