--- a/package.json
+++ b/package.json
@@ -29,59 +29,59 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.0",
-    "@angular/common": "^11.2.0",
-    "@angular/compiler": "^11.2.0",
-    "@angular/core": "^11.2.0",
-    "@angular/forms": "^11.2.0",
-    "@angular/platform-browser": "^11.2.0",
-    "@angular/platform-browser-dynamic": "^11.2.0",
-    "@angular/router": "^11.2.0",
+    "@angular/animations": "12.2.10",
+    "@angular/common": "12.2.10",
+    "@angular/compiler": "12.2.10",
+    "@angular/core": "12.2.10",
+    "@angular/forms": "12.2.10",
+    "@angular/platform-browser": "12.2.10",
+    "@angular/platform-browser-dynamic": "12.2.10",
+    "@angular/router": "12.2.10",
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@ngneat/reactive-forms": "^1.7.2",
-    "@ngrx/effects": "^11.1.1",
-    "@ngrx/store": "^11.1.1",
-    "@nrwl/angular": "12.0.8",
+    "@ngrx/effects": "12.4.0",
+    "@ngrx/store": "12.4.0",
+    "@nrwl/angular": "12.10.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "^0.10.2"
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.0",
-    "@angular-eslint/eslint-plugin": "~2.0.2",
-    "@angular-eslint/eslint-plugin-template": "~2.0.2",
-    "@angular-eslint/template-parser": "~2.0.2",
-    "@angular/cli": "~11.2.0",
-    "@angular/compiler-cli": "^11.2.0",
-    "@angular/language-service": "^11.2.0",
+    "@angular-devkit/build-angular": "12.2.10",
+    "@angular-eslint/eslint-plugin": "12.3.1",
+    "@angular-eslint/eslint-plugin-template": "12.3.1",
+    "@angular-eslint/template-parser": "12.3.1",
+    "@angular/cli": "12.2.10",
+    "@angular/compiler-cli": "12.2.10",
+    "@angular/language-service": "12.2.10",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.0.8",
-    "@nrwl/cypress": "12.0.8",
-    "@nrwl/eslint-plugin-nx": "12.0.8",
-    "@nrwl/jest": "12.0.8",
-    "@nrwl/linter": "12.0.8",
-    "@nrwl/nest": "12.0.8",
-    "@nrwl/node": "12.0.8",
-    "@nrwl/tao": "12.0.8",
-    "@nrwl/workspace": "12.0.8",
-    "@types/jest": "26.0.8",
+    "@nrwl/cli": "12.10.0",
+    "@nrwl/cypress": "12.10.0",
+    "@nrwl/eslint-plugin-nx": "12.10.0",
+    "@nrwl/jest": "12.10.0",
+    "@nrwl/linter": "12.10.0",
+    "@nrwl/nest": "12.10.0",
+    "@nrwl/node": "12.10.0",
+    "@nrwl/tao": "12.10.0",
+    "@nrwl/workspace": "12.10.0",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@typescript-eslint/eslint-plugin": "4.31.2",
+    "@typescript-eslint/parser": "4.31.2",
     "cypress": "^6.0.1",
-    "dotenv": "8.2.0",
+    "dotenv": "10.0.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "jest": "26.2.2",
-    "jest-preset-angular": "8.3.2",
-    "prettier": "2.2.1",
-    "ts-jest": "26.4.0",
+    "jest": "27.2.3",
+    "jest-preset-angular": "10.0.1",
+    "prettier": "2.4.1",
+    "ts-jest": "27.0.5",
     "ts-node": "~9.1.1",
-    "typescript": "~4.1.4"
+    "typescript": "4.3.5"
   }
 }
